After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727813 - ** (sound-juicer:17126): WARNING **: Unknown country code: XE
** (sound-juicer:17126): WARNING **: Unknown country code: XE
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: metadata
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-08 10:44 UTC by Christophe Fergeau
Modified: 2014-04-09 12:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add MusicBrainz specific county codes (1.99 KB, patch)
2014-04-09 10:03 UTC, Phillip Wood
committed Details | Review

Description Christophe Fergeau 2014-04-08 10:44:05 UTC
This is caused by the addition of country lookup, happens with http://musicbrainz.org/release-group/80695510-daef-36a7-b048-8deef6c7ba5c for example. XE is apparently Europe for some definition of it. Dunno if this is something musicbrainz specific or if this will eventually appear in iso-codes ( iso-codes-3.49-1.fc20.noarch )
Comment 1 Phillip Wood 2014-04-08 15:26:28 UTC
It's musicbrainz specific (https://musicbrainz.org/doc/Release_Country) I didn't realize they add some extra codes on top of the standard iso3166-1 codes when I wrote the country lookup stuff. There are only a few extra codes, I could add the translated names to the hash table that's populated from the iso-codes data and assume that they'll pass through dgettext ("iso_3166", country_name) unchanged or just test for them if the hash table lookup fails - what do you think is best?

The extra codes are

XC	Czechoslovakia
XG	East Germany 
XE	Europe
CS	Serbia and Montenegro
SU	Soviet Union
XU	Unknown Country
XW	Worldwide
YU	Yugoslavia
Comment 2 Christophe Fergeau 2014-04-08 15:34:50 UTC
I'd test for them if the hash table lookup fails, this way we can mark them for translation.
Comment 3 Phillip Wood 2014-04-09 10:03:58 UTC
Created attachment 273874 [details] [review]
Add MusicBrainz specific county codes

Musicbrainz uses some additional codes on top of ISO-3166 which were
not handled by commit d2d8da5 - Get country name ISO code. Treat these
extra codes as a special case if we don't get a match from the
iso-codes data.
Comment 4 Christophe Fergeau 2014-04-09 11:22:33 UTC
Review of attachment 273874 [details] [review]:

'county' instead of 'country' in the commit shortlog, looks good otherwise, thanks!
Comment 5 Christophe Fergeau 2014-04-09 11:22:33 UTC
Review of attachment 273874 [details] [review]:

'county' instead of 'country' in the commit shortlog, looks good otherwise, thanks!
Comment 6 Phillip Wood 2014-04-09 12:19:13 UTC
Attachment 273874 [details] pushed as commit 6df6b37 - Add MusicBrainz specific country codes