Add MusicBrainz specific country codes

Musicbrainz uses some additional codes on top of ISO-3166 which were
not handled by commit d2d8da5 - Get country name ISO code. Treat these
extra codes as a special case if we don't get a match from the
iso-codes data.

https://bugzilla.gnome.org/show_bug.cgi?id=727813